Refactors to generate Enterprise Search Fixes errors when endpoint has no parameters Refactors "to_snakecase" into "to_ruby_name" to avoid prepending methods with "get"

--- a/lib/generator/templates/endpoint_template.erb
+++ b/lib/generator/templates/endpoint_template.erb
@@ -5,7 +5,7 @@ module Elastic
     module WorkplaceSearch
       module Actions
         <%= @doc -%>
-        def <%= @method_name %>(<%= method_signature_params %>)
+        def <%= @method_name %><%= method_signature_params %>
           <% required_params.map do |required|
               name = required['name'] -%>
             raise ArgumentError, "Required parameter '<%= name %>' missing" unless <%= name %>
