Refactors API Generator

--- a/lib/generator/templates/endpoint_template.erb
+++ b/lib/generator/templates/endpoint_template.erb
@@ -11,6 +11,9 @@ module Elastic
           <%= raise_for_required_params %>
 
           <%= required_variables_from_parameters %>
+          <% if body? %>
+            body = arguments.delete(:body) || {}
+          <% end %>
 
           request(
             <%= request_method_params %>
