--- a/lib/generator/templates/endpoint_template.erb
+++ b/lib/generator/templates/endpoint_template.erb
@@ -15,6 +15,8 @@ module Elastic
             body = arguments.delete(:body) || {}
           <% end %>
 
+          <%= rename_exceptional_parameters %>
+
           request(
             <%= request_method_params %>
           )
